welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:2: error: not found: value une
	une souris verte
        ^alarmClock:3: error: not found: value qui
	qui courrait dans l'herbe
        ^