welcome.lessons.welcome.bat.bool2.AlarmClock.scala.code
def alarmClock(day:Int, vacation:Boolean): String = {
	une souris verte
	qui courrait dans l'herbe
	
}
